# HFLsynthesis

./: abductionCandidate.ml  abductionCandidate.mli  abductionCondition.ml  appElmination.ml  appElmination.mli  baseLogic.ml.back  constraint.ml  constraint.mli  dataType.ml  dataType.mli  dune  genEterms.ml  genEterms.mli  headCandidates.ml  headCandidates.mli  main.ml  mlEnv.ml  mlEnv.mli  pathEnv.ml  pathEnv.mli  polynomial.ml  polynomial.mli  program.ml  qualifier.ml  qualifier.mli  runBench.py  solveEquality.ml  solveEquality.mli  synthesis.ml  synthesis.mli  termIdTable.ml  termIdTable.mli
baseLogic/: baseLogic.ml  baseLogic.mli  baseLogicEq.ml  formula.ml  useZ3.ml  useZ3.mli
extensions/: extensions.ml
hfl/: hfl.ml
lib/: abductionCandidate.ml  abductionCandidate.mli  appElimination.ml  appElimination.mli  constraint.ml  constraint.mli  dataType.ml  dataType.mli  dune  expandMeasure.ml  expandMeasure.mli  genEterms.ml  genEterms.mli  main.ml  main.mli  mlEnv.ml  mlEnv.mli  pathEnv.ml  pathEnv.mli  polynomial.ml  polynomial.mli  program.ml  solveEquality.ml  solveEquality.mli  synthesis.ml  synthesis.mli  termIdTable.ml  termIdTable.mli
parser/: alpha.ml  dune  lexer.mll  mkDataTypeEnv.ml  mkDataTypeEnv.mli  mkEpsiron.ml  mkHflEquation.ml  mkHflEquation.mli  parseSyntax.ml  parser.mly  typing.ml  typing.mli
preprocess/: alpha.ml  mkDataTypeEnv.ml  mkHflEquation.ml  mkSynthesisGoals.ml  mkSynthesisGoals.mli  parseSyntax.ml  parser.mly  preprocess.ml  preprocess.mli  typing.ml
test/: dune  test.ml
testcase/: fib.spec  insert.spec  listAppend.spec  rep.spec  (+8 more)
(+31 files in other folders)
