(include_subdirs unqualified)

(env
 (dev
 (flags (:standard  -bin-annot -g -warn-error -A )))
(release
(flags (:standard  -bin-annot -A -noassert))))

; (menhir
; (modules cppFunParser)
; (mode promote)
; )

; (ocamllex
; (modules cppFunLex)
; (mode promote)
; )

(executable
(name main)
(libraries z3 base)
(modules_without_implementation dataType )
)
